# codex-antigravity-auth

./: .gitignore  AGENTS.md  LICENSE  README.md  STATUS.md  USAGE.md  VERIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
codex_antigravity_auth/: __init__.py  account_state.py  accounts.py  byok.py  cli.py  constants.py  fingerprint.py  google_transport.py  models.py  oauth.py  observability.py  onepassword.py  openai_transport.py  redaction.py  response_protocol.py  schema.py  secure_store.py  server.py  service.py  service_manager.py  storage.py  transform.py  xai_oauth.py
codex_antigravity_auth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codex_antigravity_auth/skills/anti/: SKILL.md
codex_antigravity_auth/skills/anti/agents/: openai.yaml
codex_antigravity_auth/skills/anti/scripts/: anti.py
codex_antigravity_auth/skills/anti/scripts/anti_lib/: __init__.py  chunking.py  context.py  ledger.py  redaction.py  runner.py
codex_antigravity_auth/skills/anti/tests/: test_anti.py
docs/: refactor-migration.md  refactor-release-checklist.md
docs/plans/: 2026-06-01-checklist.md  2026-06-01-code-review.md  2026-06-01-codex-shim-setup.md  2026-06-01-integration-and-reliability.md  2026-06-01-validation-report.md
docs/superpowers/plans/: 2026-07-12-comprehensive-gateway-refactor.md  2026-07-12-release-hardening-1.7.0.md
docs/superpowers/specs/: 2026-07-12-comprehensive-gateway-refactor-design.md  2026-07-12-release-hardening-1.7.0-design.md
tests/: conftest.py  test_account_state.py  test_accounts.py  test_byok_providers.py  test_cli.py  test_fidelity_edge_cases.py  test_fidelity_transforms.py  test_google_transport.py  test_openai_transport.py  test_regressions.py  test_release_workflow.py  test_response_protocol.py  test_schema_sanitization.py  test_secure_store.py  test_security_hardening.py  test_server_streaming.py  test_service_manager.py  test_storage.py  test_transform.py  test_xai_oauth.py
